force-app/main/default/objects/Correlation_Rule__mdt/Correlation_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Correlation Rule</label>
    <pluralLabel>Correlation Rules</pluralLabel>
    <description>Defines event correlation patterns for breach detection. Each rule specifies an event sequence, time window, and severity used by the EventCorrelationEngine to identify potential security breaches.</description>
</CustomObject>