force-app/main/default/objects/Correlation_Rule__mdt/fields/Event_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Event_Sequence__c</fullName>
    <label>Event Sequence</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>