force-app/main/default/objects/Correlation_Rule__mdt/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>