force-app/main/default/objects/Correlation_Rule__mdt/fields/Time_Window_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Window_Minutes__c</fullName>
    <label>Time Window Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>